bk_ida/gccida/c3/record_address_regs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2429:35: error: must use 'enum' tag to refer to type 'reg_class'
void  record_address_regs( rtx x, reg_class a2, int scale) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2465:7: error: use of undeclared identifier 'costs_0'; did you mean 'costs'?
v19 = costs_0; 
      ^~~~~~~
      costs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:861:22: note: 'costs' declared here
static struct costs *costs;
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2469:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2484:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2485:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtx = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2492:13: error: expected expression
x = *( rtx *)( v9.rtwint + 8); 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2587:13: error: expected expression
x = *( rtx *)( *( _QWORD *)&x[1] + 16LL); 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/regclass.c:2601:32: error: expected expression
record_address_regs( *( ( rtx *)x + v18 - 1), a2, scale); 
                               ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_address_regs/src/obj/regclass.o] Error 1
